refactor + api gorest + add material

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    "noImplicitAny": false,
     "lib": [
       "es2020",
       "dom"
@@ -29,6 +30,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
+    "noImplicitAny": false,
     "extendedDiagnostics": {
       "checks": {
         "optionalChainNotNullable": "suppress"
